[gd_scene load_steps=16 format=3 uid="uid://bo6gfdcnsjsuy"]

[ext_resource type="Script" path="res://proto_combat_map_v1/Scripts/combat_proto.gd" id="1_d8x88"]
[ext_resource type="PackedScene" uid="uid://mx0c7vkqcljs" path="res://proto_combat_v5/Scenes/character.tscn" id="3_e42mq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_022bj"]
size = Vector3(405.999, 1, 3.04644)

[sub_resource type="BoxMesh" id="BoxMesh_md5hv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4ey01"]
sky_top_color = Color(0.625808, 0.918612, 1, 1)
sky_horizon_color = Color(0.51, 0.689667, 1, 1)
sky_curve = 0.0494816

[sub_resource type="Sky" id="Sky_yy1ip"]
sky_material = SubResource("ProceduralSkyMaterial_4ey01")

[sub_resource type="Environment" id="Environment_5ldtc"]
background_mode = 2
sky = SubResource("Sky_yy1ip")

[sub_resource type="LabelSettings" id="LabelSettings_k2lqm"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dcnxa"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1ntkv"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sef8e"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_s8dbo"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ft5el"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itw0l"]
transparency = 1
blend_mode = 2
albedo_color = Color(0.355314, 0.355314, 0.355314, 1)

[sub_resource type="QuadMesh" id="QuadMesh_ritml"]
material = SubResource("StandardMaterial3D_itw0l")

[node name="Combat_Proto" type="Node3D"]
script = ExtResource("1_d8x88")

[node name="Node3D" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.308746, 0, 0.0161858)
shape = SubResource("BoxShape3D_022bj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/StaticBody3D"]
transform = Transform3D(406.504, 0, 0, 0, 1, 0, 0, 0, 332.145, 0, 0, 0)
mesh = SubResource("BoxMesh_md5hv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0.183013, -0.183013, 0, 0.707107, 0.707107, 0.258819, -0.683013, 0.683013, 0, 3.84087, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("3_e42mq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="Enemy" parent="." instance=ExtResource("3_e42mq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, 0)

[node name="Pivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, -0.25, 7.289)
environment = SubResource("Environment_5ldtc")
fov = 35.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HPPlayer" type="Label" parent="UI"]
layout_mode = 0
offset_left = 144.0
offset_top = 384.0
offset_right = 246.0
offset_bottom = 407.0
text = "999
"
label_settings = SubResource("LabelSettings_k2lqm")

[node name="HPPlayerLabel" type="Label" parent="UI/HPPlayer"]
layout_mode = 0
offset_left = -80.0
offset_right = 3.0
offset_bottom = 23.0
text = "Player HP: "
label_settings = SubResource("LabelSettings_dcnxa")

[node name="HPEnemy" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1048.0
offset_top = 384.0
offset_right = 1096.0
offset_bottom = 407.0
text = "999"
label_settings = SubResource("LabelSettings_1ntkv")

[node name="HPEnemyLabel" type="Label" parent="UI/HPEnemy"]
layout_mode = 0
offset_left = -88.0
offset_right = -5.0
offset_bottom = 23.0
text = "Enemy HP:"
label_settings = SubResource("LabelSettings_sef8e")

[node name="ButtonAttack" type="Button" parent="UI"]
layout_mode = 0
offset_left = 65.0
offset_top = 426.0
offset_right = 191.0
offset_bottom = 459.0
text = "Attack"

[node name="PhaseText" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 256.0
offset_right = 957.0
offset_bottom = 137.0
text = "PLAYER PHASE"
label_settings = SubResource("LabelSettings_s8dbo")
horizontal_alignment = 1

[node name="DamageIndicator" type="Label3D" parent="UI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54295, 0)
visible = false
text = "999"
font_size = 200

[node name="EndText" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 520.0
offset_top = 128.0
offset_right = 699.0
offset_bottom = 173.0
text = "Click to exit"
label_settings = SubResource("LabelSettings_ft5el")
horizontal_alignment = 1

[node name="StatsLabel" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerStatsLabel" type="Label3D" parent="UI/StatsLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.11359, 0.412115, 0)
visible = false
text = "Name: null
Max HP: null
Attack: null
Defense: null"
horizontal_alignment = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="UI/StatsLabel/PlayerStatsLabel"]
transform = Transform3D(1.28815, 0, 0, 0, 0.939864, 0, 0, 0, 1, 0.550612, 0, -0.0527378)
mesh = SubResource("QuadMesh_ritml")

[node name="EnemyStatsLabel" type="Label3D" parent="UI/StatsLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.01846, 0.412, 0)
visible = false
text = "Name: null
Max HP: null
Attack: null
Defense: null"
horizontal_alignment = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="UI/StatsLabel/EnemyStatsLabel"]
transform = Transform3D(1.28815, 0, 0, 0, 0.939864, 0, 0, 0, 1, 0.550612, 0, -0.0527378)
mesh = SubResource("QuadMesh_ritml")

[connection signal="mouse_entered" from="Player" to="." method="_on_player_mouse_entered"]
[connection signal="mouse_exited" from="Player" to="." method="_on_player_mouse_exited"]
[connection signal="mouse_entered" from="Enemy" to="." method="_on_enemy_mouse_entered"]
[connection signal="mouse_exited" from="Enemy" to="." method="_on_enemy_mouse_exited"]
[connection signal="pressed" from="UI/ButtonAttack" to="." method="_on_button_attack_pressed"]
